[package]
author = "Alexandria P."
name = "dynarg"
version = "2.0.3"
edition = "2021"
description = "A simple mechanism for dynamic robust argument handling"
license = "LGPL-3.0-or-later"
repository = "https://github.com/alxpettit/dynarg"
keywords = ["argument", "dynamic", "arguments", "dispatch"]
categories = ["data-structures", "config", "rust-patterns"]

[dependencies]
indexmap = "1.9.2"
snafu = "0.7.4"
 
[features]
used = []
default = ["used"]
